base/stremio/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stremio
  namespace: apps
spec:
  type: ClusterIP
  ports:
  - port: 11470
    targetPort: 11470
    protocol: TCP
  selector:
    app: stremio
