base/stremio/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stremio
  namespace: apps
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  # Uncomment for TLS
  # tls:
  # - hosts:
  #   - svr.aacg.dev
  #   secretName: svr-tls
  rules:
  - host: svr.aacg.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: stremio
            port:
              number: 11470
